force-app/main/default/objects/CLM_Presentation_Session__c/CLM_Presentation_Session__c.object-meta.xml
<CustomObject>
    <label>CLM Presentation Session</label>
    <nameField>
        <displayFormat>CLMS-{00000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLM Presentation Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>