force-app/main/default/objects/CLM_Presentation_Session__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CLM Sessions</relationshipLabel>
    <relationshipName>CLM_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>