force-app/main/default/objects/CLM_Presentation_Session__c/fields/Client_Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Session_Key__c</fullName>
    <externalId>true</externalId>
    <label>Client Session Key</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>