force-app/main/default/objects/CLM_Presentation_Session__c/fields/CLM_Presentation__c.field-meta.xml
<CustomField>
    <fullName>CLM_Presentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLM Presentation</label>
    <referenceTo>CLM_Presentation__c</referenceTo>
    <relationshipLabel>CLM Sessions</relationshipLabel>
    <relationshipName>CLM_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>