force-app/main/default/objects/CLM_Presentation_Session__c/fields/Slides_Presented_Count__c.field-meta.xml
<CustomField>
    <fullName>Slides_Presented_Count__c</fullName>
    <label>Slides Presented Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>