force-app/main/default/objects/CLM_Presentation_Session__c/fields/Total_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_Minutes__c</fullName>
    <description>Presentation duration in minutes, derived from tracked slide time.</description>
    <formula>Total_Duration_Seconds__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Duration Minutes</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>