force-app/main/default/objects/CLM_Presentation_Session__c/fields/Total_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_Seconds__c</fullName>
    <label>Total Duration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>