force-app/main/default/objects/CLM_Presentation_Session__c/fields/Tracking_Paused__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking Paused</label>
    <type>Checkbox</type>
</CustomField>