force-app/main/default/objects/CLM_Presentation_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CLM Sessions</relationshipLabel>
    <relationshipName>CLM_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>