force-app/main/default/objects/CLM_Presentation_Session__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>CLM Sessions</relationshipLabel>
    <relationshipName>CLM_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>